--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <title>Title</title>
     <meta content="width=device-width, initial-scale=1" name="viewport">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
 </head>
 <body>
 <div id="root">
